--- a/imdb_clone/index.html
+++ b/imdb_clone/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://kit.fontawesome.com/e217ef1cb3.js" crossorigin="anonymous"></script>
   </body>
 </html>
